--- a/Aspert/Aspert/Views/WelcomePage.xaml
+++ b/Aspert/Aspert/Views/WelcomePage.xaml
@@ -1,51 +1,53 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:Aspert.ViewModels"
-             xmlns:db="clr-namespace:Aspert.Database" 
+             xmlns:db="clr-namespace:Aspert.Database"
              xmlns:aspert="clr-namespace:Aspert"
              x:Class="Aspert.WelcomePage"
              x:DataType="{x:Type vm:ViewModel}">
-    <Grid BackgroundColor="White" 
-          ColumnDefinitions="*,9*,*" 
-          RowDefinitions="*,*,Auto,Auto,2*,*,*,*">
+    <Grid BackgroundColor="AliceBlue">
         <Grid.BindingContext>
             <vm:ViewModel/>
         </Grid.BindingContext>
-        <Image Grid.ColumnSpan="3"
-               Grid.RowSpan="8"
-               Aspect="Fill"
-               Source="bg1_aspert.png"/>
-        <Label Grid.Column="1" 
-               Grid.Row="1" 
-               FontAttributes="Bold"
-               FontFamily="Sensei"
-               FontSize="Title"
-               Text="{Binding Source={Static db:SQLiteDB.Usuario}, StringFormat='¡Bienvenid@, {0}!'}"
-               TextColor="{StaticResource Blue}"/>
-        <Label Grid.Column="1" 
-               Grid.Row="2" 
-               FontAttributes="Bold"
-               FontFamily="Sensei"
-               FontSize="Title"
-               Text="ASPERT"
-               TextColor="{StaticResource Blue}"
-               Padding="10"/>
-        <aspert:JustifiedLabel 
-            Grid.Column="1" 
-            Grid.Row="3" 
-            Padding="10"
-            Text="ASPERT es una app desarrollada de forma gratuita para brindar información y colaboración a las personas y familias relacionadas con niños con síndrome de Asperger."/>
-        <Button Grid.Column="1" 
-                Grid.Row="4" 
-                Command="{Binding Push}"
-                CommandParameter="{Type aspert:MainPage}"
-                BackgroundColor="Transparent"
-                HorizontalOptions="End"
-                Text="OK"
-                TextColor="#47525E"/>
-        <Image Grid.Column="1" 
-               Grid.Row="5" 
-               Source="{StaticResource Logo}"/>
+        <Frame BackgroundColor="Transparent"
+               BorderColor="{StaticResource Blue}"
+               Margin="20">
+            <Grid RowDefinitions="50,Auto,50,Auto,*">
+                <Label Grid.Row="1"
+                       FontAttributes="Bold"
+                       FontFamily="Concert"
+                       FontSize="Title"
+                       Text="{Binding Source={Static db:SQLiteDB.Usuario}, StringFormat='¡Bienvenid@, {0}!'}"
+                       TextColor="{StaticResource Blue}" />
+                <StackLayout Grid.Row="3"
+                             Margin="20"
+                             Spacing="20">
+                    <Label FontAttributes="Bold"
+                           FontFamily="Concert"
+                           FontSize="Title"
+                           Text="ASPERT"
+                           TextColor="{StaticResource Blue}" />
+                    <aspert:JustifiedLabel FontFamily="Roboto" 
+                                           Text="ASPERT es una app desarrollada de forma gratuita para brindar información y colaboración a las personas y familias relacionadas con niños con síndrome de Asperger." />
+                    <Button BackgroundColor="Transparent"
+                            Font="Concert"
+                            Command="{Binding Push}"
+                            CommandParameter="{Type aspert:MainPage}"
+                            HorizontalOptions="End"
+                            Text="OK"
+                            TextColor="#47525E" />
+                </StackLayout>
+                <Grid Grid.Row="4"
+                      ColumnDefinitions="*,100,*"
+                      RowDefinitions="*,100,*">
+                    <Image Grid.Column="1"
+                           Grid.Row="1"
+                           HorizontalOptions="Center"
+                           Source="{StaticResource Logo}"
+                           VerticalOptions="Center" />
+                </Grid>
+            </Grid>
+        </Frame>
     </Grid>
 </ContentPage>
