--- a/Aspert/Aspert/PageTemplate.xaml
+++ b/Aspert/Aspert/PageTemplate.xaml
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8"?>
-<ContentView xmlns="http://xamarin.com/schemas/2014/forms" 
+<ContentView xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Aspert.PageTemplate">
     <ContentView.Content>
@@ -9,10 +9,10 @@
                          Clicked="OnClicked"
                          HorizontalOptions="Start"
                          Padding="10"
-                         Source="{StaticResource MenuIcon}"/>
+                         Source="{StaticResource GrayMenuIcon}"/>
         <Image Grid.Row="1" 
                Aspect="Fill" 
-               Source="{StaticResource Background}"/>
+               Source="{StaticResource TransparentBackground}"/>
         <ContentView x:Name="BodyContent" 
                      Grid.Row="1"/>
         <ImageButton x:Name="btnBack" 
