--- a/Aspert/Aspert/Views/AbcPage.xaml
+++ b/Aspert/Aspert/Views/AbcPage.xaml
@@ -12,11 +12,12 @@
                 <Grid.Resources>
                     <Style TargetType="{Type Label}" ApplyToDerivedTypes="False">
                         <Setter Property="FontAttributes" Value="Bold"/>
-                        <Setter Property="FontSize" Value="Title"/>
+                        <Setter Property="FontFamily" Value="Concert" />
+                        <Setter Property="FontSize" Value="Title" />
                         <Setter Property="TextColor" Value="{StaticResource Yellow}"/>
                     </Style>
                     <Style TargetType="{Type aspert:JustifiedLabel}">
-                        <Setter Property="FontFamily" Value="Concert"/>
+                        <Setter Property="FontFamily" Value="Roboto"/>
                         <Setter Property="TextColor" Value="{StaticResource Gray}"/>
                     </Style>
                 </Grid.Resources>
