--- a/Aspert/Aspert/Views/InitPage.xaml
+++ b/Aspert/Aspert/Views/InitPage.xaml
@@ -12,9 +12,10 @@
                Grid.ColumnSpan="2"
                Grid.Row="3" 
                Padding="20,0,0,0"
-               Text="aspert" 
+               Text="ASPERT" 
                TextColor="{StaticResource Blue}"
                FontAttributes="Bold"
+               FontFamily="Concert"
                FontSize="Large"/>
         <Label Grid.Column="1"
                Grid.ColumnSpan="2"
@@ -23,6 +24,7 @@
                Text="expertos en asperger" 
                TextColor="#47525E"
                FontAttributes="Bold"
+               FontFamily="Roboto"
                FontSize="Small"/>
     </Grid>
 
